[package]
name = "neuland-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iptables = "0.4"
serde = {version = "1.0.130", features = ["derive"]}
serde_yaml = "0.8.21"
regex = "1"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
colored = "2.0.0"
thiserror = "1.0.29"
anyhow = "1.0.44"
itertools = "0.10.1"